Update and rename mp_events_txt.html.html to mp_events_txt.html

--- a/mp_events_txt.html
+++ b/mp_events_txt.html
@@ -11,7 +11,7 @@
     Author: Neslihan Salimoglu
     Date:   28.03.2020
 	 
-    Filename: mp_events_txt.html.html
+    Filename: mp_events_txt.html
    -->
    <meta charset="utf-8" />
    <title>Mobile Panini Events Calendar</title>
@@ -25,10 +25,10 @@
     <a link="mp_index.html"></a><img src="mp_logo.png" alt="Mobile Panini"/></a>
     <nav>
       <ul>
-        <li><a href="mp_index_txt.html.html">Home</a></li>
-        <li><a href="mp_menu_txt.html.html">Menu</a></li>
-        <li><a href="mp_events_txt.html.html">Events</a></li>
-        <li><a href="mp_catering_txt.html.html">Catering</a></li>
+        <li><a href="mp_index_txt.html">Home</a></li>
+        <li><a href="mp_menu_txt.html">Menu</a></li>
+        <li><a href="mp_events_txt.html">Events</a></li>
+        <li><a href="mp_catering_txt.html">Catering</a></li>
       </ul>
     </nav>
   </header>
